# brownbags

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.model  Makefile  README-Docker.md  UPGRADE_SUMMARY.md  docker-compose.yml
api/: .dockerignore  Dockerfile  README_DOCKER.md  api.py  pyproject.toml  redis_loader.py  requirements.txt  workspace.code-workspace-Predictor.code-workspace
docs/: PYTORCH_UPGRADE.md  README.md  architecture-overview.md  project-structure.md  system-diagrams.md
model/: pyproject.toml  pytorch_model.py  regression.py  training.py  transfer.py
notebooks/: housing_price_prediction.ipynb  housing_price_prediction.py  zero_trust_guardrails.ipynb  zero_trust_guardrails.py
redis/: redis.conf
