[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9.16"
flask = "^3.0"
zappa = "^0.59"
pandas = "^2.0"
joblib = "^1.0"
scikit-learn = "^1.4"
torch = "^2.1.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^1.0"
flake8 = "^7.0"
coverage = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
