[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9.16"
pandas = "^2.0"
psycopg2 = "^2.9"
boto3 = "^1.14"
joblib = "^1.0"
scikit-learn = "^1.4"
scikit-optimize = "^0.10"
statsmodels = "^0.14"
xgboost = "^2.0"
catboost = "^1.2"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
